--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -3,10 +3,18 @@ title: Skin URL Upload
 description: Learn how to use the SkinsRestorer /upload page to generate a /skin url command.
 ---
 
+import { Callout } from 'fumadocs-ui/components/callout';
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 
 SkinsRestorer provides an [/upload](/upload) page that turns your skin PNG into a ready-to-use `/skin url` command.
 Use it to safely upload your file to MineSkin and copy the command in just a few clicks.
+
+<Callout emoji="🎉">
+  Need a MineSkin API key? All plans except Lite support cape generation,
+  higher limits, and other exclusive features. Use the exclusive coupon code
+  <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
+  plans except Lite).
+</Callout>
 
 ## Before you start
 
