Link MineSkin API key signup

--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -11,7 +11,9 @@ Use it to safely upload your file to MineSkin and copy the command in just a few
 
 <Callout emoji="🎉">
   Need a MineSkin API key? All plans except Lite support cape generation,
-  higher limits, and other exclusive features. Use the exclusive coupon code
+  higher limits, and other exclusive features. Visit the
+  <a href="https://mineskin.org/apikey" target="_blank" rel="noreferrer">MineSkin API keys page</a>
+  to get started and use the exclusive coupon code
   <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
   plans except Lite).
 </Callout>
