--- a/content/docs/development/inner-workings.mdx
+++ b/content/docs/development/inner-workings.mdx
@@ -35,7 +35,9 @@ For 2. we use [MineSkin](https://mineskin.org) to apply the skin data to the pla
 
 <Callout emoji="🎉">
   Need a MineSkin API key? All plans except Lite support cape generation,
-  higher limits, and other exclusive features. Use the exclusive coupon code
+  higher limits, and other exclusive features. Visit the
+  <a href="https://mineskin.org/apikey" target="_blank" rel="noreferrer">MineSkin API keys page</a>
+  to get started and use the exclusive coupon code
   <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
   plans except Lite).
 </Callout>
