Clarify MineSkin coupon disclosure

--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -15,7 +15,8 @@ Use it to safely upload your file to MineSkin and copy the command in just a few
   <a href="https://mineskin.org/apikey" target="_blank" rel="noreferrer">MineSkin API keys page</a>
   to get started and use the exclusive coupon code
   <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
-  plans except Lite).
+  plans except Lite). We don't receive a commission if you use this coupon—it's
+  just a community perk.
 </Callout>
 
 ## Before you start
