Highlight MineSkin coupon and plan benefits (#658)
* Highlight MineSkin coupon and plan benefits

* Link MineSkin API key signup

* Clarify MineSkin coupon disclosure

* Move MineSkin help text into popover

--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -3,10 +3,21 @@ title: Skin URL Upload
 description: Learn how to use the SkinsRestorer /upload page to generate a /skin url command.
 ---
 
+import { Callout } from 'fumadocs-ui/components/callout';
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 
 SkinsRestorer provides an [/upload](/upload) page that turns your skin PNG into a ready-to-use `/skin url` command.
 Use it to safely upload your file to MineSkin and copy the command in just a few clicks.
+
+<Callout emoji="🎉">
+  Need a MineSkin API key? All plans except Lite support cape generation,
+  higher limits, and other exclusive features. Visit the
+  <a href="https://mineskin.org/apikey" target="_blank" rel="noreferrer">MineSkin API keys page</a>
+  to get started and use the exclusive coupon code
+  <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
+  plans except Lite). We don't receive a commission if you use this coupon—it's
+  just a community perk.
+</Callout>
 
 ## Before you start
 
