--- a/content/docs/development/inner-workings.mdx
+++ b/content/docs/development/inner-workings.mdx
@@ -33,6 +33,16 @@ We're using two methods to get you the skin you want.
 
 For 2. we use [MineSkin](https://mineskin.org) to apply the skin data to the player from any PNG file you want.
 
+<Callout emoji="🎉">
+  Need a MineSkin API key? All plans except Lite support cape generation,
+  higher limits, and other exclusive features. Visit the
+  <a href="https://mineskin.org/apikey" target="_blank" rel="noreferrer">MineSkin API keys page</a>
+  to get started and use the exclusive coupon code
+  <code>SKINSRESTORER10</code> to get 10% off your first three months (valid on
+  plans except Lite). We don't receive a commission if you use this coupon—it's
+  just a community perk.
+</Callout>
+
 ## How does getting a skin look like?
 
 Here is a simple flowchart:
