docs: add axolotl to domains

--- a/content/docs/troubleshooting/firewall.mdx
+++ b/content/docs/troubleshooting/firewall.mdx
@@ -27,6 +27,7 @@ Our plugin needs the following domains at the following ports to be fully reacha
 
 | Domain                          | Port  |
 | ------------------------------- | ----- |
+| `axolotl.skinsrestorer.net`     | `443` |
 | `eclipse.skinsrestorer.net`     | `443` |
 | `cool-skins.skinsrestorer.net`  | `443` |
 | `api.mojang.com`                | `443` |
